--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 
   <footer>
     <p>&copy; 2025 DriveNow Rentals. All rights reserved.</p>
+<p>CEO: Kalimba Alex</p>
   </footer>
 
   <script>
